spacing fixes

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   z-index: 2;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 850px) {
   .App {
     font-size: 14px;
   }
