--- a/src/components/Landing.scss
+++ b/src/components/Landing.scss
@@ -3,13 +3,12 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     overflow: auto;
     gap: 50px;
 
-    @media screen and (max-width: 750px) {
-        justify-content: space-around;
+    @media screen and (max-width: 850px) {
         padding: 20px 0px 50px 0px;
         box-sizing: border-box;
     }
@@ -21,7 +20,7 @@
     justify-content: space-between;
     text-align: center;
 
-    @media screen and (max-width: 750px) {
+    @media screen and (max-width: 850px) {
         align-items: center;
         flex-direction: column;
     }
@@ -31,7 +30,7 @@
     font-size: 26px ;
     text-align: start;
 
-    @media screen and (max-width: 750px) {
+    @media screen and (max-width: 850px) {
         text-align: center;
     }
 }
@@ -41,7 +40,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    @media screen and (max-width: 750px) {
+    @media screen and (max-width: 850px) {
         margin-top: 15px;
     }
 }
@@ -50,7 +49,7 @@
     display: flex;
     justify-content: end;
 
-    @media screen and (max-width: 750px) {
+    @media screen and (max-width: 850px) {
         display: flex;
         justify-content: center;
     }
@@ -68,7 +67,7 @@
     display: flex;
     font-family: Sans-new-regular;
 
-    @media screen and (max-width: 750px) {
+    @media screen and (max-width: 850px) {
         font-size: 14px;
         max-width: 70vw;
     }
@@ -103,7 +102,7 @@
     justify-content: center;
     align-items: center;
 
-    @media screen and (max-width: 750px) {
+    @media screen and (max-width: 850px) {
         flex-direction: column-reverse;
     }
 }
