--- a/src/components/Resume.scss
+++ b/src/components/Resume.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding: 10px 100px;
+    // padding: 10px 100px;
+    padding: 10px 100px 50px 100px;
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
@@ -10,12 +11,12 @@
     height: 100%;
 
     @media screen and (max-width: 850px) {
-        padding: 10px 20px 20px 20px;
+        padding: 10px 20px 50px 20px;
     }
 }
 
 .r-heading{
-    margin-top: 50px;
+    margin-top: 70px;
     font-size: 35px;
     @media screen and (max-width: 850px) {
         font-size: 35px;
@@ -46,6 +47,10 @@
     display: flex;
     flex-direction: column;
     font-family: Sans-new-regular;
+
+    @media screen and (max-width: 850px) {
+        max-width: 500px;
+    }
 }
 
 .cards-font{
